<resources>
    <string name="app_name">Health Plants APP</string>
    <string name="logo">logo</string>
    <string name="plant">Plant </string>
    <string name="health"> Health</string>
    <string name="w_e_l_c_o_m_e">W E L C O M E !</string>
    <string name="our_motivation">Our motivation:</string>
    <string name="meet">Sow, plant and cultivate!</string>
    <string name="quot_expand">\Help solve the problem of yield losses in crop plants due to infectious diseases and offers the potential of turning the smartphone into a valuable tool for diverse communities growing food.</string>
    <string name="home">Home</string>
    <string name="analyze">Analyze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_image">View image</string>
    <string name="remidy">Remidy</string>
    <string name="cite">Cite</string>
    <string name="logout">Logout</string>
    <string name="star">Star</string>
</resources>