<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/green_primary"
        tools:context=".view.ScreenActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_screen_mini">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangers"
                android:text="@string/plant"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/text_view_second"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangers"
                android:text="@string/health"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="40sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="@string/w_e_l_c_o_m_e"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="25sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_slogan"
                android:layout_width="340dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="22sp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/green_secondary">

                <TextView
                    android:id="@+id/text_view_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:text="@string/meet"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/card_view_slogan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/green_secondary"
                app:layout_constraintVertical_bias="0.261">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/our_motivation"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bangers"
                        android:textAlignment="center"
                        android:textSize="25sp">
                    </TextView>

                    <TextView
                        android:id="@+id/text_info_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="50dp"
                        android:paddingStart="2dp"
                        android:paddingTop="30dp"
                        android:paddingEnd="20dp"
                        android:paddingLeft="50dp"
                        android:paddingBottom="40dp"
                        android:text="@string/quot_expand"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bangers"
                        android:textAlignment="center"
                        android:textSize="20sp">
                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>